# spritissimo

./: AUTHORS  Makefile.am  README  configure.ac
assets/: Makefile.am
assets/fonts/: Makefile.am
assets/help/: Makefile.am  shortcuts.xml
assets/images/: Makefile.am
assets/resolutions/: Makefile.am  c64.xml  config.xml  pmode3.xml
src/: Animation_panel.cpp  Animation_panel.h  Animation_status_panel.cpp  Animation_status_panel.h  Application.cpp  Application.h  Clipboard.cpp  Clipboard.h  Color_selection_panel.cpp  Color_selection_panel.h  Config.cpp  Config.h  Editing_event.cpp  Editing_event.h  Editing_panel.cpp  Editing_panel.h  Editing_status_panel.cpp  Editing_status_panel.h  File_IO.cpp  File_IO.h  Globals.cpp  Globals.h  Heartbeat.cpp  Heartbeat.h  Help_screen.cpp  Help_screen.h  Makefile.am  Palette.cpp  Palette.h  Palette_panel.cpp  Palette_panel.h  Panel_dims.h  Preview_panel.cpp  Preview_panel.h  Project.cpp  Project.h  Resolution.cpp  Resolution.h  Sprite.cpp  Sprite.h  (+10 more)
